NAS-115394: fixed clipping of text in the input field

--- a/src/app/modules/entity/entity-toolbar/components/toolbar-input/toolbar-input.component.scss
+++ b/src/app/modules/entity/entity-toolbar/components/toolbar-input/toolbar-input.component.scss
@@ -15,13 +15,13 @@
     text-overflow: ellipsis;
     top: 11px;
     white-space: nowrap;
-    width: calc(100% - 37px);
+    width: calc(100% - 57px);
   }
 
-  input.mat-input-element {
+  .mat-input-element {
     height: 18px;
     white-space: nowrap;
-    width: calc(100% - 37px);
+    width: calc(100% - 11px);
   }
 }
 
